# MrHash

./: .gitignore  .travis.yml  CMakeLists.txt  MrHashApp.cpp  MrHashApp.h  MrHashMain.cpp  MrHashMain.h  README.md
hashlibrary/: CMakeLists.txt  keccak.cpp  sha3.cpp
src/: MrHashApp.cpp  MrHashApp.h  MrHashMain.cpp  MrHashMain.h
src/hashlibrary/: crc32.cpp  sha1.cpp
